# Probing-Representation-Forgetting

./: README.md  pyproject.toml  requirements.txt
src/: main.py  train_model.py
src/models/: cifar10.py  imagenet_based_models.py  probes.py
src/strategy/: ewc.py  lwf.py  supcon.py
src/task_data_loader/: cub.py  flowers.py  imagenet.py  scenarios.py  scenes.py  split_cifar10.py
src/utilities/: cka.py  configs.py  evaluation.py  loggers.py  metrics.py  trainer.py  utils.py
