[tool.poetry]
name = "probing-representation-forgetting"
version = "0.1.0"
description = ""
authors = ["Reza Davari <rezazzr@hotmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
black = "^21.6b0"
aiohttp = "^3.7.4"
aiohttp_cors = "^0.7.0"
numpy = "^1.20.3"
prettytable = "^2.1.0"
matplotlib = "^3.4.2"
tensorboard = "^2.5.0"
scipy = "^1.7.0"
Pillow = "8.2.0"
jupyter = "^1.0.0"
poethepoet = "^0.10.0"
pandas = "^1.3.3"
tqdm = "^4.62.3"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
force-cuda11 = "pip3 install torch==1.9.0+cu111 torchvision==0.10.0+cu111 torchaudio==0.9.0 -f https://download.pytorch.org/whl/torch_stable.html"
